@@ -17,6 +17,9 @@ Bug fixed in 1.8.2a:
   - Do not AC_SUBST(LIBOBJS) in AM_WITH_REGEX.  This macro was unusable
     since Autoconf 2.54, which defines LIBOBJS itself.
 
+  - Fix a potential (but unlikely) race condition in parallel elisp
+    builds.  (Introduced in 1.7.3.)
+
 * New sections in manual:
 
   - Third-Party Makefiles: how to interface third party Makefiles.
