@@ -1,5 +1,13 @@
 2004-02-01  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (handle_emacs_lisp): Define $(ELCFILES) as
+	$(am__ELCFILES), and always push it on @all.  Do not mention
+	elc-stamp.
+	* lib/am/lisp.am (.el.elc): Rewrite as ...
+	($(am__ELCFILES)): ... this, and depend on elc-stamp.
+	(elc-stamp): Make sure elc-stamp is older that all .elc files, as
+	explained in the manual entry below.
+
 	* doc/automake.texi (multiple outputs): New node.
 
 2004-01-31  Alexandre Duret-Lutz  <adl@gnu.org>
